[DNPC] updated project page bibtex/video/code links

--- a/index.html
+++ b/index.html
@@ -164,8 +164,9 @@
                     </p>
                     <p class="w3-large w3-left-align w3-text-blue">
                         <a href="https://arxiv.org/abs/2406.10078">[paper]</a>&nbsp
+                        <a href="https://www.youtube.com/watch?v=NSpptS38uL0">[video]</a>&nbsp
                         <a href="projects/dnpc/index.html">[project page]</a>&nbsp
-                        [code (coming soon)]
+                        <a href="https://github.com/MoritzKappel/D-NPC">[code]</a>&nbsp
                         <!-- <a href="https://graphics.tu-bs.de/publications/kappel2024d-npc">[project page]</a>&nbsp -->
                     </p>
                 </div> 
