--- a/projects/dnpc/index.html
+++ b/projects/dnpc/index.html
@@ -109,15 +109,15 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://youtu.be/oO9in569dcc?si=FT66U8MZBRSoKQ05o">
+                    <a class="nav-link" href="https://www.youtube.com/watch?v=NSpptS38uL0">
                         <img src="assets/youtube_icon.png" height="60px">
                         <h4><strong>Video</strong></h4>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/moritzkappel/">
+                    <a class="nav-link" href="https://github.com/MoritzKappel/D-NPC">
                         <img src="assets/github.png" height="60px">
-                        <h4><strong>Code<br>(Coming Soon)</strong></h4>
+                        <h4><strong>Code</strong></h4>
                     </a>
                 </li>
             </ul>
@@ -432,11 +432,15 @@
             <h3>BibTeX</h3>
             <hr>
 <pre>
-@article{kappel2024d-npc,
-    title = {D-{NPC}: Dynamic Neural Point Clouds for Non-Rigid View Synthesis from Monocular Video},
-    author = {Kappel, Moritz and Hahlbohm, Florian and Scholz, Timon and Castillo, Susana and Theobalt, Christian and Eisemann, Martin and Golyanik, Vladislav and Magnor, Marcus},
-    howpublished = {arXiv preprint},
-    year = {2024}
+@inproceedings{kappel2024d-npc,
+  title = {D-{NPC}: Dynamic Neural Point Clouds for Non-Rigid View Synthesis from Monocular Video},
+  author = {Kappel, Moritz and Hahlbohm, Florian and Scholz, Timon and Castillo, Susana  and Theobalt, Christian and Eisemann, Martin and Golyanik, Vladislav and Magnor, Marcus},
+  booktitle = {Proc. Eurographics},
+  editor = {A. Bousseau and A. Dai},
+  volume = {44},
+  number = {2},
+  note = {To appear},
+  year = {2025}
 }</pre>
         </div>
     </div>
